# lyss-ai-platform

./: .env  .env.dev  .env.example  .env.local  .env.template  .gitignore  00_Introduction_and_Architecture.md  01_整合架构设计方案.md  02_项目开发指南.md  03_数据库设计文档.md  04_API接口设计文档.md  05_前端组件设计文档.md  1.txt  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  CLAUDE.md  CLAUDE_MEMORY.md  CURRENT_STATUS.md  DEVELOPMENT_PRIORITY.md  EX.md  LYSS AI平台开源自建方案(PRD与开发指南).md  PROJECT_CONFUSION_POINTS.md  PROJECT_IMPROVEMENTS.md  PROJECT_STATUS.md  PROJECT_VULNERABILITIES.md  README.md  READ_ME_FIRST.md  TECH_STACK_RESEARCH.md  dependency-upgrade-implementation-plan.md  docker-compose.dev.yml  docker-compose.infrastructure.yml  docker-compose.yml  frontend-dependency-security-analysis.md  go.work  key.txt  python-dependencies-security-audit-2025.md  read.md  下次会话开发指南.md  企业级AI服务聚合平台开发前文档_.md  基础设施依赖调研报告.md  (+18 more)
auth-service/: .env  .env.example  .gitkeep  pyproject.toml  requirements.txt
auth-service/auth_service/: config.py  main.py
auth-service/auth_service/core/: exceptions.py  security.py  security_policy_manager.py  tokens.py
auth-service/auth_service/middleware/: auth_middleware.py  error_handler.py  rate_limit_middleware.py  request_logging.py
auth-service/auth_service/models/schemas/: login.py  response.py  token.py
auth-service/auth_service/routers/: __init__.py  auth.py  health.py  internal.py  tokens.py
auth-service/auth_service/services/: __init__.py  auth_service.py  tenant_client.py
auth-service/auth_service/utils/: logging.py  redis_client.py
auth-service/tests/: conftest.py  test_api_routes.py  test_auth_manager.py  test_jwt_manager.py  test_rbac_manager.py
backend/: .env  .env.example  .gitkeep  API_GATEWAY_SUMMARY.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start_server.py  test_auth.py  test_updated_auth.py  后端代码审视修正总结.md  后端依赖修复总结.md  快速启动说明.md
backend/api-gateway/: __init__.py  main.py
backend/api-gateway/routers/: __init__.py  health.py
backend/api_gateway/: __init__.py  config.py  main.py
backend/api_gateway/core/: __init__.py  dependencies.py  logging.py  security.py
backend/api_gateway/middleware/: __init__.py  auth.py  cors.py  error_handler.py  rate_limit.py  request_id.py
backend/api_gateway/routers/: __init__.py  ai_chat.py  auth.py  conversations.py  health.py  proxy.py
backend/api_gateway/services/: __init__.py  base_client.py  proxy_service.py
backend/api_gateway/utils/: __init__.py  constants.py  exceptions.py  helpers.py
backend/common/: __init__.py  config.py  database.py  models.py  models_old.py  redis_client.py  response.py  security.py
backend/scripts/: health_check.py  start_dev.py
backend/services/: __init__.py  ai_service.py  conversation_service.py  message_service.py
chat-service/: .env.example  README.md  go.mod  go.sum  test_eino.go
chat-service/configs/: config.go
config/: redis.conf
docs/: EINO 框架深度调研报告_.md  PROJECT_STRUCTURE.md  README.md  STANDARDS.md  api_gateway.md  auth_service.md  development.md  eino_service.md  frontend.md  memory_service.md  tenant_service.md
eino-service/: .gitkeep  Dockerfile  README.md  config.yaml  go.mod  go.sum
eino-service/cmd/: main.go
frontend/: .env.development  .env.example  .eslintrc.js  .gitignore  .gitkeep  .prettierrc  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
infrastructure/redis/: redis.conf
k8s/base/: api-gateway-deployment.yaml  configmap.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml
lyss-auth-service/: pytest.ini  requirements-dev.txt  run_tests.py  start.py
lyss-auth-service/auth_service/: config.py  dependencies.py  main.py
lyss-auth-service/tests/: test_mfa_manager.py  test_oauth2_manager.py  test_security_policy_manager.py
lyss-provider-service/: requirements.txt
lyss-provider-service/app/: main.py  (+1 more)
memory-service/: .gitkeep  Dockerfile  requirements.txt
monitoring/: alert_rules.yml  prometheus.yml
provider-service/: .env  .env.example  .env.template  API透明代理功能完成报告.md  Dockerfile  Provider模块完整开发报告.md  README.md  alembic.ini  docker-compose.yml  main.py  requirements.txt  simple_main.py
read/: api_design.md  database_design.md  deployment_config.md  eino_workflows.md  frontend_components.md  monitoring_logging.md  multi_tenant_architecture.md  security_rbac.md  testing_strategy.md
refactor/: 01-项目现状与重构理由.md  02-技术调研与架构设计.md  03-渐进式改造实施计划.md  README.md  development-guide.md
scripts/: setup-dev.sh  start-dev-services.sh  start-infra.sh
sql/: .gitkeep  00-extensions.sql  01-init-base.sql  03-provider-service.sql  03_chat_service_schema.sql  init.sql
tenant-service/: .env  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
tenant-service/scripts/: start_dev.py
tenant-service/tenant_service/: __init__.py  config.py  main.py
tenant-service/tenant_service/core/: encryption.py  tenant_context.py
tenant-service/tenant_service/models/database/: __init__.py  base.py  role.py  tenant.py  tool_config.py  user.py  user_preference.py
tenant-service/tenant_service/models/schemas/: base.py  supplier.py  tenant.py  user.py
tenant-service/tenant_service/repositories/: tenant_repository.py  user_repository.py
tenant-service/tenant_service/routers/: health.py  internal.py  suppliers.py  tenants.py  users.py
tenant-service/tenant_service/services/: supplier_service.py  user_service.py
tenant-service/tenant_service/utils/: __init__.py
user-service/: .env.example  .gitkeep
(+229 files in other folders)
